[package]
name = "gmsm"
version = "0.0.4"
edition = "2018"
authors = ["nfjbill <nfjbill@qq.com>"]
description = "A Rust Library of China's Standards of Encryption Algorithms (SM2/3/4)"
keywords = ["cipher", "cryptography"]
license = "Apache-2.0"
repository = "https://github.com/nfjBill/rust-gmsm"
readme = "README.md"

[dependencies]
hex = "0.3"